# amalgama

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
amalgama/: CMakeLists.txt  config.cmake  package.cmake
amalgama/source/: main.c
amalgama/tests/: CMakeLists.txt
amalgama/tests/unit/: Test.cpp
tools/: x64compile.sh
utils/: CMakeLists.txt
utils/recv_packet/: CMakeLists.txt
utils/tcp/: CMakeLists.txt
utils/tcp/source/: main.cpp
